# braids-rs

./: BACKLOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
benches/: core_stack_executor.rs  criterion_packet_api.rs  criterion_stack_api.rs  fastnoise_worldgen.rs
docs/: architecture.md  writing_planners_and_backends.md
examples/: lanes_showcase.rs
fastnoise/: .gitignore  Cargo.toml  README.md  flamegraph.sh
fastnoise/benches/: fastnoise_worldgen.rs
fastnoise/examples/: lanes_showcase.rs  profile_terrain.rs  terrain_stack.rs
fastnoise/src/: lib.rs  model.rs  runtime.rs  scenarios.rs  tests.rs
src/: buffer_pool.rs  compute.rs  cpu.rs  error.rs  executor.rs  job.rs  lib.rs  pipeline.rs  planner.rs  scratch.rs  slot_table.rs  stack.rs  tests.rs  version.rs
tests/: stack_integration.rs
