[package]
name = "braids"
version = "0.2.0"
edition = "2024"
readme = "README.md"
license = "MIT"
repository = "https://github.com/catermujo/braids-rs"
description = "ProcGen-oriented parallelism & acceleration framework"

[workspace]
members = [".", "fastnoise"]
resolver = "3"

[lib]
path = "src/lib.rs"

# [[bench]]
# name = "core_stack_executor"
# path = "benches/core_stack_executor.rs"
# harness = false

[[bench]]
name = "fastnoise_worldgen"
path = "benches/fastnoise_worldgen.rs"
harness = false

[[bench]]
name = "criterion_packet_api"
harness = false

[[bench]]
name = "criterion_stack_api"
harness = false

[dev-dependencies]
braids-fastnoise = { path = "fastnoise" }
criterion = "0.8"

[workspace.lints.rust]
redundant_imports = "deny"
unused_imports = "deny"
future-incompatible = "deny"
nonstandard_style = "deny"

[workspace.lints.clippy]
all = "deny"

unwrap_used = "deny"
redundant_clone = "deny"
manual_while_let_some = "deny"
needless_return = "deny"
redundant_else = "deny"
unwrap_or_default = "deny"
manual_unwrap_or_default = "deny"
