[package]
name = "braids-fastnoise"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
f64 = ["fastnoise-lite/f64"]
std = ["fastnoise-lite/std"]
libm = ["fastnoise-lite/libm"]

[dependencies]
braids = { path = ".." }
fastnoise-lite = { version = "1.1.1", default-features = false }
