[package]
name = "braids-fastnoise"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/catermujo/braids-rs"
description = "`fastnoise-lite` `Planner` impl for braids"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
f64 = ["fastnoise-lite/f64"]
std = ["fastnoise-lite/std"]
libm = ["fastnoise-lite/libm"]

[dependencies]
braids = { path = "..", version = "0.2.0" }
fastnoise-lite = { version = "1.1.1", default-features = false }
