[package]
name = "braids-fastnoise"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/catermujo/braids-rs"
description = "`fastnoise-lite` `Planner` impl for braids"

[lib]
path = "src/lib.rs"

[[bench]]
name = "fastnoise_worldgen"
path = "benches/fastnoise_worldgen.rs"
harness = false

[features]
default = ["std"]
f64 = ["fastnoise-lite/f64"]
std = ["fastnoise-lite/std"]
libm = ["fastnoise-lite/libm"]

[dependencies]
braids = { path = "..", version = "0.2.0" }
fastnoise-lite = { version = "1.1.1", default-features = false }

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
